# extra_packages

./: README.md
rpg_youbot_torque_control/torque_example/src/: circle.cpp
rpg_youbot_torque_control/youbot_arm_model/include/youbot_arm_model/: youbot_arm_dynamics_symbolic.h
src/youbot_battery_control/: CMakeLists.txt  package.xml
src/youbot_battery_control/launch/: youbot_battery_control.launch
src/youbot_battery_control/src/: youbot_battery_control.cpp
src/youbot_dashboard/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/youbot_dashboard/launch/: youbot_dashboard.launch
src/youbot_dashboard/src/: control.cpp~  youbot_battery_monitor.cpp  youbot_dashboard.cpp
src/youbot_dashboard/srv/: SetDisplay.srv
src/youbot_description/robots/: youbot.urdf.xacro  youbot_arm_only.urdf.xacro  youbot_dual_arm_with_standart_gripper.urdf.xacro  youbot_with_standart_gripper.urdf.xacro
src/youbot_gazebo_robot/launch/: youbot_arm_only.launch
src/youbot_gazebo_worlds/launch/: empty_world.launch  tower_of_hanoi.launch
youbot_description/robots/: youbot.urdf.xacro  youbot_base_only.urdf.xacro  youbot_dual_arm.urdf.xacro  youbot_with_cam3d.urdf.xacro
youbot_description/urdf/youbot_arm/: arm.urdf.xacro  limits.urdf.xacro
youbot_driver/: CMakeLists.txt  package.xml
youbot_driver/config/: youbot-manipulator2.cfg
youbot_driver/include/youbot_driver/base-kinematic/: FourSwedishWheelOmniBaseKinematic.hpp  FourSwedishWheelOmniBaseKinematicConfiguration.hpp  WheeledBaseKinematic.hpp
youbot_driver/include/youbot_driver/generic/: ConfigFile.hpp  Logger.hpp  PidController.hpp  Time.hpp
youbot_driver/include/youbot_driver/generic-gripper/: Gripper.hpp  GripperData.hpp  GripperParameter.hpp
youbot_driver/include/youbot_driver/generic-joint/: Joint.hpp  JointData.hpp  JointParameter.hpp  JointTrajectory.hpp
youbot_driver/include/youbot_driver/generic/dataobjectlockfree/: DataObjectLockFree.hpp
youbot_driver/include/youbot_driver/generic/dataobjectlockfree/os/: oro_arch.h
youbot_driver/include/youbot_driver/one-dof-gripper/: OneDOFGripper.hpp  OneDOFGripperData.hpp
youbot_driver/include/youbot_driver/testing/: YouBotArmTest.hpp  YouBotArmTestWithoutThread.hpp  YouBotBaseKinematicsTest.hpp  YouBotBaseTest.hpp  YouBotBaseTestWithoutThread.hpp  YouBotGripperTest.hpp
youbot_driver/include/youbot_driver/youbot/: DataTrace.hpp  EthercatMaster.hpp  EthercatMasterInterface.hpp  EthercatMasterWithThread.hpp  EthercatMasterWithoutThread.hpp  GripperDataTrace.hpp  JointLimitMonitor.hpp  JointTrajectoryController.hpp  YouBotBase.hpp  YouBotGripper.hpp  YouBotGripperBar.hpp  YouBotGripperParameter.hpp  YouBotJoint.hpp  YouBotJointParameter.hpp  YouBotJointParameterPasswordProtected.hpp  YouBotJointParameterReadOnly.hpp  YouBotManipulator.hpp  YouBotSlaveMailboxMsg.hpp  YouBotSlaveMsg.hpp
youbot_driver/src/base-kinematic/: FourSwedishWheelOmniBaseKinematic.cpp  FourSwedishWheelOmniBaseKinematicConfiguration.cpp  WheeledBaseKinematic.cpp
youbot_driver/src/generic/: ConfigFile.cpp  Logger.cpp  PidController.cpp
youbot_driver/src/generic-joint/: JointData.cpp  JointTrajectory.cpp
youbot_driver/src/soem/: OldCMakeLists.txt
youbot_driver/src/soem/src/: ebox.c  eepromtool.c  ethercatbase.c  ethercatcoe.c  ethercatconfig.c  ethercatdc.c  ethercatfoe.c  ethercatmain.c  ethercatprint.c  ethercatsoe.c  nicdrv.c  red_test.c  simple_test.c  slaveinfo.c
youbot_driver/src/testing/: CMakeLists.txt  TestSuite.cpp  YouBotArmTest.cpp  YouBotArmTestWithoutThread.cpp  YouBotBaseKinematicsTest.cpp  YouBotBaseTest.cpp  YouBotBaseTestWithoutThread.cpp  YouBotGripperTest.cpp
youbot_driver/src/youbot/: DataTrace.cpp  EthercatMaster.cpp  EthercatMasterWithThread.cpp  EthercatMasterWithoutThread.cpp  GripperDataTrace.cpp  JointLimitMonitor.cpp  JointTrajectoryController.cpp  YouBotBase.cpp  YouBotGripper.cpp  YouBotGripperBar.cpp  YouBotGripperParameter.cpp  YouBotJoint.cpp  YouBotJointParameter.cpp  YouBotJointParameterPasswordProtected.cpp  YouBotJointParameterReadOnly.cpp  YouBotManipulator.cpp
youbot_driver_ros_interface/include/youbot_driver_ros_interface/: YouBotOODLWrapper.h
youbot_driver_ros_interface/launch/: youbot_driver.launch  youbot_driver_dual_arm.launch
youbot_driver_ros_interface/src/: YouBotOODLWrapper.cpp  youbot_oodl.cpp
youbot_driver_ros_interface/src/examples/: youbot_2nd_arm_test.cpp  youbot_arm_test.cpp
youbot_gazebo_control/config/: arm_controller.yaml
youbot_gazebo_control/launch/: arm_controller.launch
youbot_gazebo_controllers_remap/: CMakeLists.txt  package.xml  package.xml~
youbot_gazebo_controllers_remap/include/youbot_gazebo_controllers_remap/: ControllersRemap.hpp
youbot_gazebo_controllers_remap/src/: controllers_remap.cpp  main.cpp  main.cpp~
youbot_gazebo_robot/launch/: youbot.launch  youbot_arm_only.launch
youbot_gazebo_worlds/launch/: robocup_at_work_2012.launch
